Correction on covers

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -310,6 +310,7 @@ h3 {
   .cover {
     display: none;
     max-width: 870px;
+    max-height: 80vh;
 
     img {
       width: 100%;
